--- a/Okhome/app/src/main/res/values/strings.xml
+++ b/Okhome/app/src/main/res/values/strings.xml
@@ -60,7 +60,8 @@
     <string name="sunday">Sunday</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="estimated_time">Estimated Time</string>
+    <string name="start_date">The Service Starts from</string>
+    <string name="want_another_day">Want Another Day?</string>
 
 </resources>
