--- a/Okhome/app/src/main/res/values/strings.xml
+++ b/Okhome/app/src/main/res/values/strings.xml
@@ -63,5 +63,11 @@
     <string name="estimated_time">Estimated Time</string>
     <string name="start_date">The Service Starts from</string>
     <string name="want_another_day">Want Another Day?</string>
+    <string name="eight_thirty">08:30</string>
+    <string name="nine_zero">09:00</string>
+    <string name="fourteen_zero">14:00</string>
+    <string name="fourteen_thirty">14:30</string>
+    <string name="nineteen_thirty">19:30</string>
+    <string name="twenty_zero">20:00</string>
 
 </resources>
