--- a/Okhome/app/src/main/res/values/strings.xml
+++ b/Okhome/app/src/main/res/values/strings.xml
@@ -70,4 +70,7 @@
     <string name="nineteen_thirty">19:30</string>
     <string name="twenty_zero">20:00</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
