--- a/Okhome/app/src/main/res/values/strings.xml
+++ b/Okhome/app/src/main/res/values/strings.xml
@@ -92,7 +92,9 @@
     </string-array>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="oreder_confirm_page">POINTS</string>
+    <string name="service_start_schedule">Service will starts from</string>
+
 
 
 </resources>
