--- a/Okhome/app/src/main/res/values/strings.xml
+++ b/Okhome/app/src/main/res/values/strings.xml
@@ -62,7 +62,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="estimated_time">Estimated Time</string>
     <string name="start_date">The Service Starts from</string>
-    <string name="want_another_day">Want Another Day?</string>
     <string name="eight_thirty">08:30</string>
     <string name="nine_zero">09:00</string>
     <string name="fourteen_zero">14:00</string>
@@ -95,6 +94,8 @@
     <string name="oreder_confirm_page">POINTS</string>
     <string name="service_start_schedule">Service will starts from</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
