--- a/Okhome/app/src/main/res/values/strings.xml
+++ b/Okhome/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Okhome</string>
     <string name="action_settings">Settings</string>
     <string name="toLogin">Login</string>
+    <string name="toLogOut">Log Out</string>
     <string name="toOrder">Order</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="text_appId">Insert Email ID</string>
